--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "build": "NODE_ENV=production tsdx build --format cjs",
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
-    "prepare": "NODE_ENV=production tsdx build  --format cjs",
     "size": "size-limit",
+    "prepare": "NODE_ENV=production tsdx build  --format cjs",
     "analyze": "size-limit --why",
     "storybook": "start-storybook -s ./stories/public -p 6006",
     "build-storybook": "build-storybook",
@@ -61,16 +61,19 @@
     }
   ],
   "devDependencies": {
-    "@babel/core": "^7.12.3",
+    "@babel/core": "^7.14.0",
+    "@babel/helper-builder-react-jsx": "^7.12.13",
+    "@babel/helper-builder-react-jsx-experimental": "^7.12.11",
     "@size-limit/preset-small-lib": "^4.6.0",
-    "@storybook/addon-essentials": "^6.1.6",
+    "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-info": "^5.3.21",
-    "@storybook/addon-links": "^6.1.6",
-    "@storybook/addons": "^6.1.6",
-    "@storybook/react": "^6.1.6",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/addons": "^6.2.9",
+    "@storybook/react": "^6.2.9",
     "@tailwindcss/forms": "^0.2.1",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.3",
+    "@types/three": "^0.127.1",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
     "autoprefixer": "^10.0.2",
@@ -79,37 +82,37 @@
     "husky": "^4.3.0",
     "postcss": "^8.1.10",
     "prettier": "^2.1.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-is": "^17.0.1",
-    "react-three-fiber": "^5.3.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-is": "^17.0.2",
+    "react-three-fiber": "^6.0.13",
     "rollup-plugin-postcss": "^3.1.8",
     "size-limit": "^4.6.0",
     "tailwindcss": "^2.0.1",
-    "three": "^0.121.1",
+    "three": "^0.128.0",
     "to-string-loader": "^1.1.6",
     "tsdx": "^0.14.1",
-    "tslib": "^2.0.3",
-    "typescript": "4.0.5"
+    "tslib": "^2.2.0",
+    "typescript": "4.2.4"
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
-    "@react-three/drei": "^2.2.10",
+    "@react-three/drei": "^4.3.3",
     "@types/file-saver": "^2.0.1",
     "fast-deep-equal": "^3.1.3",
     "file-saver": "^2.0.2",
-    "prism-react-renderer": "^1.1.1",
+    "prism-react-renderer": "^1.2.0",
     "prop-types": "^15.7.2",
     "react-hook-form": "^6.11.0",
     "react-merge-refs": "^1.1.0",
     "react-shadow": "^18.5.1",
-    "react-use-measure": "^2.0.3",
-    "reakit": "^1.3.0",
-    "zustand": "^3.2.0"
+    "react-use-measure": "^2.0.4",
+    "reakit": "^1.3.8",
+    "zustand": "^3.5.0"
   },
   "resolutions": {
     "postcss": "8.1.7",
-    "**/typescript": "4.0.5",
+    "**/typescript": "4.2.4",
     "**/@typescript-eslint/eslint-plugin": "^4.6.1",
     "**/@typescript-eslint/parser": "^4.6.1"
   }
