--- a/package.json
+++ b/package.json
@@ -24,16 +24,24 @@
     "node": ">=10"
   },
   "scripts": {
-    "start": "tsdx watch",
-    "build": "NODE_ENV=production tsdx build --format cjs",
-    "test": "tsdx test --passWithNoTests",
-    "lint": "tsdx lint",
-    "size": "size-limit",
-    "prepare": "NODE_ENV=production tsdx build  --format cjs",
     "analyze": "size-limit --why",
     "storybook": "start-storybook -s ./stories/public -p 6006",
-    "build-storybook": "build-storybook",
-    "np": "NODE_ENV=production np --any-branch"
+    "np": "NODE_ENV=production np --any-branch",
+    "watch": "start-storybook -p 6006 --ci",
+    "watch-https": "start-storybook -p 6006 --ci --https --ssl-cert ./dev/certs/cert.pem --ssl-key ./dev/certs/key.pem",
+    "@comment TEST": "Useful in testing",
+    "check": "tsc --noEmit",
+    "lint": "eslint --ext \".ts,.tsx,.js,.jsx\" ./src --fix",
+    "@comment PUBLISH": "Useful for publishing package",
+    "buildesm": "tsc --project src/ -p src/tsconfig-esm.json; cpy '**/*' '!**/*.{ts,tsx}' ../lib/esm/src/ --cwd=src/ --no-overwrite --parents;",
+    "buildcjs": "tsc --project src/ -p src/tsconfig-cjs.json; cpy '**/*' '!**/*.{ts,tsx}' ../lib/cjs/src/ --cwd=src/ --no-overwrite --parents;",
+    "build": "del lib; yarn buildesm && yarn buildcjs",
+    "buildstorybook": "rm -rf build; mkdir -p build; build-storybook -o build",
+    "bundle": "yarn publish:version && yarn publish:npm",
+    "publish:version": "N=$(node -p \"require('./package.json').name\") && yarn version patch --message \"v%s: $N [ci skip]\"",
+    "publish:version-notag": "N=$(node -p \"require('./package.json').name\") && yarn version --no-git-tag-version patch && git commit -am \"trigger: $N [no skip]\"",
+    "publish:npm": "V=$(node -p \"require('./package.json').version\") && yarn publish",
+    "gencerts": "node ./dev/scripts/keygen.js"
   },
   "peerDependencies": {
     "react": ">=16",
@@ -61,14 +69,16 @@
     }
   ],
   "devDependencies": {
-    "@babel/core": "^7.14.0",
-    "@babel/helper-builder-react-jsx": "^7.12.13",
-    "@babel/helper-builder-react-jsx-experimental": "^7.12.11",
     "@size-limit/preset-small-lib": "^4.6.0",
+    "@storybook/addon-actions": "^6.2.7",
+    "@storybook/addon-backgrounds": "^6.2.7",
+    "@storybook/addon-controls": "^6.2.7",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-info": "^5.3.21",
     "@storybook/addon-links": "^6.2.9",
+    "@storybook/addon-viewport": "^6.2.7",
     "@storybook/addons": "^6.2.9",
+    "@storybook/builder-webpack5": "^6.2.7",
     "@storybook/react": "^6.2.9",
     "@tailwindcss/forms": "^0.2.1",
     "@types/react": "^17.0.5",
@@ -78,7 +88,13 @@
     "@typescript-eslint/parser": "^4.8.2",
     "autoprefixer": "^10.0.2",
     "babel-loader": "^8.1.0",
+    "cpy-cli": "^3.1.1",
+    "css-loader": "^4.2.2",
+    "del-cli": "^3.0.1",
+    "esbuild-loader": "^2.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.0",
     "postcss": "^8.1.10",
     "prettier": "^2.1.2",
@@ -87,13 +103,22 @@
     "react-is": "^17.0.2",
     "react-three-fiber": "^6.0.13",
     "rollup-plugin-postcss": "^3.1.8",
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1",
     "size-limit": "^4.6.0",
+    "storybook": "^6.2.1",
+    "storybook-addon-turbo-build": "^1.0.0-beta.0",
+    "style-loader": "^2.0.0",
     "tailwindcss": "^2.0.1",
     "three": "^0.128.0",
     "to-string-loader": "^1.1.6",
-    "tsdx": "^0.14.1",
-    "tslib": "^2.2.0",
-    "typescript": "4.2.4"
+    "ts-loader": "^8.1.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4",
+    "webpack": "^5.31.0",
+    "webpack-bundle-analyzer": "^4.4.0",
+    "webpack-cli": "^4.6.0",
+    "zustand": "^3.4.1"
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
@@ -101,13 +126,14 @@
     "@types/file-saver": "^2.0.1",
     "fast-deep-equal": "^3.1.3",
     "file-saver": "^2.0.2",
+    "postcss-loader": "^5.2.0",
     "prism-react-renderer": "^1.2.0",
     "prop-types": "^15.7.2",
     "react-hook-form": "^6.11.0",
     "react-merge-refs": "^1.1.0",
     "react-shadow": "^18.5.1",
     "react-use-measure": "^2.0.4",
-    "reakit": "^1.3.8",
+    "reakit": "^1.3.0",
     "zustand": "^3.5.0"
   },
   "resolutions": {
