--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,39 @@
 {
-  // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
-  "include": ["src", "types"],
+  //https://www.staging-typescript.org/tsconfig#module
   "compilerOptions": {
-    "target": "ES5",
+    // module system used. This is for the import statements. "CommonJS", "ES2020"
+    "module": "CommonJS",
+    "noImplicitAny": true,
+    "preserveConstEnums": true,
     "resolveJsonModule": true,
-    "module": "esnext",
-    "lib": ["dom", "esnext"],
-    "importHelpers": true,
-    // output .d.ts declaration files for consumers
-    "declaration": true,
-    // output .js.map sourcemap files for consumers
-    "sourceMap": true,
-    // match output dir to input dir. e.g. dist/index instead of dist/src/index
-    "rootDir": "./src",
-    // stricter type-checking for stronger correctness. Recommended by TS
-    "strict": true,
-    // linter checks for common issues
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    // noUnused* overlap with @typescript-eslint/no-unused-vars, can disable if duplicative
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    // use Node's module resolution algorithm, instead of the legacy TS one
-    "moduleResolution": "node",
-    // transpile JSX to React.createElement
-    "jsx": "react",
-    // interop between ESM and CJS modules. Recommended by TS
+    // Import non-ES modules as default imports.
     "esModuleInterop": true,
-    // significant perf increase by skipping checking .d.ts files, particularly those in node_modules. Recommended by TS
-    "skipLibCheck": true,
-    // error out if import and file system have a casing mismatch. Recommended by TS
-    "forceConsistentCasingInFileNames": true,
-    // `tsdx build` ignores this option, but it is commonly used when type-checking separately with `tsc`
-    "noEmit": true
-  }
+    // Target latest version of ECMAScript available (ES2020). This is for our code (and not imported code)
+    // null coalescing doesn't work if target is made ES2020
+    "target": "ES2019",
+    // default set of type definitions for built-in JS APIs. Which this a lot of default JS objects become available
+    "lib": ["ES2019", "DOM"],
+    // Enable strictest settings like strictNullChecks & noImplicitAny. Needed for Typescript to understand complex types
+    "strict": true,
+    // allow jsx syntax
+    "jsx": "react",
+    // Search under node_modules for non-relative imports.
+    // "moduleResolution": "node", //Not needed - its the default
+    // Process & infer types from .js files
+    // "allowJs": true, //Not needed yet
+    // Don't emit js files; allow Babel to transform files. Not making true here as watch mode needs emit
+    // Instead of setting this here, we control it using --noEmit in package.json
+    // "noEmit": true,
+
+    //Temp: keeping bottom four commented lines, maybe deleted
+    // Disallow features that require cross-file information for emit.
+    // "isolatedModules": false,
+    // "rootDirs": ["src"],
+    // "baseUrl": "."
+
+    //Getting lots of threejs and use-tweaks type errors. This prevents typescript from going inside node_modules.
+    "skipLibCheck": true
+  },
+  "include": ["src/**/*", "stories/**/*"],
+  "exclude": ["build"]
 }
